--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -1,33 +1,13 @@
-<%= form_for(@invoice) do |f| %>
-  <% if @invoice.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@invoice.errors.count, "error") %> prohibited this invoice from being saved:</h2>
-
-      <ul>
-      <% @invoice.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :titolo %><br>
-    <%= f.text_field :titolo %>
-  </div>
-  <div class="field">
-    <%= f.label :descrizione %><br>
-    <%= f.text_area :descrizione %>
-  </div>
-  <div class="field">
-    <%= f.label :image_url %><br>
-    <%= f.text_field :image_url %>
-  </div>
-  <div class="field">
-    <%= f.label :price %><br>
-    <%= f.text_field :price %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+<%= simple_form_for @invoice, :html => { :class => 'well form-horizontal' } do |f| %>
+<%= render 'shared/error_messages', object: f.object %>
+  <%= f.input :titolo, label: "Titolo Fattura", hint: 'inserire titolo fattura'%>
+  <%= f.input :descrizione, label: "Descrizione Fattura", hint: 'inserire descrizione fattura' %>
+  <%= f.input :VAT, label: "IVA", hint: 'valore attuale IVA associato alla fattura' %>
+  <%= f.input :TotaleNoVat, label: "Totale Fattura", hint: 'totale da calcolare automaticamente' %>
+  <%= f.input :DataEmissione,as: :string, :input_html => {:class => 'datepicker col-span-3'}, label: "Data Emissione", hint: "inserire la data della fattura" %>
+  <div class="form-actions">
+    <%= f.button :submit, :class => 'btn-primary', value:"Crea Fattura" %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                invoices_path, :class => 'btn' %>
   </div>
 <% end %>
