--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,41 +1,42 @@
-<h1>Listing invoices</h1>
-
-<div class="panel panel-info">
-  <!-- Default panel contents -->
-  <div class="panel-heading">Panel heading</div>
-
-
-  <!-- Table -->
-  <table class="table table-striped table-bordered table-hover">
-
+<%- model_class = Invoice -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Titolo</th>
-      <th>Descrizione</th>
-      <th>Image url</th>
-      <th>Price</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th> Codice Fattura </th>
+      <th><%= model_class.human_attribute_name(:titolo) %></th>
+      <th><%= model_class.human_attribute_name(:descrizione) %></th>
+      <th><%= "IVA" %></th>
+      <th><%= "Totale senza IVA" %></th>
+      <th><%= "Data emissione Fattura" %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @invoices.each do |invoice| %>
       <tr>
-        <td><%= invoice.titolo %></td>
+        <td><%= link_to invoice.id, invoice_path(invoice) %></td>
+        <td><%= link_to invoice.titolo, invoice_path(invoice) %></td>
         <td><%= invoice.descrizione %></td>
-        <td><%= invoice.image_url %></td>
-        <td><%= invoice.price %></td>
-        <td><%= link_to 'Show', invoice %></td>
-        <td><%= link_to 'Edit', edit_invoice_path(invoice) %></td>
-        <td><%= link_to 'Destroy', invoice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= invoice.VAT %></td>
+        <td><%= invoice.TotaleNoVat %></td>
+        <td><%= invoice.DataEmissione %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_invoice_path(invoice), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      invoice_path(invoice),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-</div>
 
-<br>
-
-<%= link_to 'New Invoice', new_invoice_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_invoice_path,
+            :class => 'btn btn-primary' %>
