--- a/app/views/invoice_details/show.html.erb
+++ b/app/views/invoice_details/show.html.erb
@@ -6,12 +6,12 @@
 </p>
 
 <p>
-  <strong>Vat:</strong>
+  <strong>IVA:</strong>
   <%= @invoice_detail.VAT %>
 </p>
 
 <p>
-  <strong>Importonovatsingolo:</strong>
+  <strong>Importo senza IVA:</strong>
   <%= @invoice_detail.ImportoNoVatSingolo %>
 </p>
 
@@ -21,7 +21,7 @@
 </p>
 
 <p>
-  <strong>Invoice:</strong>
+  <strong>id Fattura:</strong>
   <%= @invoice_detail.invoice_id %>
 </p>
 
