--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Home", root_path %></li>
-          <li><a href="#">Contatti</a></li>
+          <li><%= link_to "Fatture", invoices_path%></li>
           <li><a href="#">Aiuto</a></li>
         </ul>
       </nav>
