Fatturazione e routing nestate

--- a/app/views/invoice_details/_invoice_detail.html.erb
+++ b/app/views/invoice_details/_invoice_detail.html.erb
@@ -5,5 +5,15 @@
  	<td><%= invoice_detail.VAT %></td>
  	<td><%= invoice_detail.ImportoNoVatSingolo %></td>
  	<td><%= invoice_detail.Qta %></td>
- 	<td><%= "az" %></td>
+ 	<td>
+
+ 		<%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_invoice_invoice_detail_path(invoice_id, invoice_detail), :class => 'btn btn-mini' %>
+        <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      invoice_invoice_detail_path(invoice_id, invoice_detail),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+
+ 	</td>
  </tr>
