--- a/app/views/invoice_details/edit.html.erb
+++ b/app/views/invoice_details/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @invoice_detail %> |
-<%= link_to 'Back', invoice_details_path %>
+<%= link_to 'Show', invoice_path(@invoice) %> |
+<%= link_to 'Back', invoice_invoice_detail_path %>
