--- a/app/views/invoice_details/_form.html.erb
+++ b/app/views/invoice_details/_form.html.erb
@@ -1,5 +1,7 @@
-<%= form_for @invoice_detail, :url => {:action => "create", :invoice_id => @invoice.id} do |f| %>
   
+
+<%= form_for [@invoice, @invoice_detail] do |f| %>
+
   <%= render 'shared/error_messages', object: f.object %>
 
   <div class="field">
