--- a/app/views/invoice_details/index.html.erb
+++ b/app/views/invoice_details/index.html.erb
@@ -22,9 +22,9 @@
         <td><%= invoice_detail.ImportoNoVatSingolo %></td>
         <td><%= invoice_detail.Qta %></td>
         <td><%= invoice_detail.invoice_id %></td>
-        <td><%= link_to 'Show', invoice_detail %></td>
-        <td><%= link_to 'Edit', edit_invoice_detail_path(invoice_detail) %></td>
-        <td><%= link_to 'Destroy', invoice_detail, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', invoice_invoice_detail(invoice,invoice_detail) %></td>
+        <td><%= link_to 'Edit', edit_invoice_invoice_detail_path(invocice,invoice_detail) %></td>
+        <td><%= link_to 'Destroy', invoice_invoice_detail, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
