--- a/app/views/invoice_details/new.html.erb
+++ b/app/views/invoice_details/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New invoice_detail</h1>
+<h1>New invoice detail</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', invoice_details_path %>
+<%= link_to 'Back', invoice_invoice_details_path %>
