--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -32,7 +32,7 @@
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
           <%= link_to t('.add', :default => t("helpers.links.add")),
-                      new_invoice_detail_path(:invoice_id => invoice.id), :class => 'btn btn-mini btn-primary' %>
+                      new_invoice_invoice_detail_path(invoice.id), :class => 'btn btn-mini btn-primary' %>
         </td>
       </tr>
     <% end %>
