--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,21 @@
   <%= render 'layouts/header' %>
 	<div class="container">
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+        <% if alert %>
+            <div class="alert alert-block">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <p class="alert"><%= alert %></p>
+            </div>
+        <% end %>
+
+
+        <% if notice %>
+            <div class="alert alert-info">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <p class="notice"><%= notice %></p>
+            </div>
+        <% end %>
+    
 
 		<%= yield %>
 
