--- a/app/views/invoice_details/edit.html.erb
+++ b/app/views/invoice_details/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', invoice_path(@invoice) %> |
-<%= link_to 'Back', invoice_invoice_detail_path %>
+<%= link_to 'Back', invoice_path(@invoice) %>
