--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -15,6 +15,8 @@
       <dd><%= @invoice.TotaleNoVat %></dd>
       <dt><strong><%= model_class.human_attribute_name(:DataEmissione) %>:</strong></dt>
       <dd><%= @invoice.DataEmissione %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
+      <dd><%= User.find(@invoice.user_id).email %></dd>
     </dl>
   </div>
   <div class="span8">
